# Tibricks

./: .env_sample  .gitignore  Dockerfile  README.md  pyproject.toml
k8s/: tidb-loader-pod.yaml  tidb-secret.yaml
src/: tidb_loader.py  tidb_loader_pytidb.py
